[workspace]
members = [
    "image_processor",
    "blur_plugin",
    "mirror_plugin"
]
resolver = "2"
[workspace.package]
name = "image_ffi_project"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2.0"
image = "0.25.9"
libc = "0.2.180"
